Ejercicios del libro cap 5-8 Lewis Mendoza Genao

--- a/Segunda tarea cap5-8/Segunda tarea cap5-8.csproj
+++ b/Segunda tarea cap5-8/Segunda tarea cap5-8.csproj
@@ -40,8 +40,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Capitulo5\Ejercicios5.cs" />
+    <Compile Include="Capitulo7\Ejercicios7.cs" />
+    <Compile Include="Capitulo8\Ejercicios8.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Capitulo6\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
